# PLATFORM

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  LICENSE  ParallelIO__MOS_8cpp_source.html  README.md  annotated.html  classPGrid-members.html  classPGrid.html  classes.html  classmeta-members.html  classmeta.html  classpMat-members.html  classpMat.html  classparamMap-members.html  classparamMap.html  classsysInfo-members.html  classsysInfo.html  classtecIO-members.html  classtecIO.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  doxygen.input  example1.html  example2.html  extern__func_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  getting-started.html  hierarchy.html  index.html  installation.html  md_README.html  menudata.js  metadata_8cpp_source.html  metadata_8hpp_source.html  misc__func_8cpp_source.html  (+17 more)
.github/workflows/: cmake.yml  main.yml
CASLAB_execs/: CMakeLists.txt  PDP_time.cpp  POD_tec.cpp  QDEIM_pre.cpp  QDIEM_pre.cpp  calcSamplingError.cpp  projEr.cpp  projErP.cpp  serial_norm_calc.cpp  testLeastSquares.cpp
CASLAB_execs/error_calcs/: CMakeLists.txt  field_error.cpp  sampling_error.cpp
CASLAB_execs/error_calcs/include/: error_funcs.hpp
CASLAB_execs/error_calcs/src/: error_funcs.cpp
CASLAB_execs/hyper_reduction/: CMakeLists.txt  QDEIM_pre.cpp
CASLAB_execs/hyper_reduction/include/: sampling.hpp
CASLAB_execs/hyper_reduction/src/: sampling.cpp
CraftTec_Exec/: CMakeLists.txt  POD_bin.cpp
CraftTec_tutorial/: CMakeLists.txt  demo_binary.cpp  ex1_param.cpp  ex2_pMat.cpp  ex3_testbin.cpp  ex4_testbinSVD.cpp  ex5_testtecSVD.cpp  test_bin.cpp  test_binSVD.cpp
MATLAB/: QR_dev.m
MATLAB_preprocessing/: Craft_PreProcess.m  Craft_PreProcess2.m  binread.m  binwrite.m  narwhal.pbs
doc/: GettingStarted.md  example1.md  example2.md  installation.md  main.md
examples/example1/: binary_reading.cpp
examples/example2/: POD_tec.inp
executables/: CMakeLists.txt  POD_tec.cpp  projEr.cpp
include/: dataID.hpp  dataTool.hpp  executioner.hpp  extern_func.hpp  inputInfo.hpp  inputReader.hpp  metadata.hpp  misc_func.hpp  misc_func_mpi.hpp  misc_tfuncs.hpp  operation.hpp  pMat.hpp  param.hpp  paramID.hpp  parser.hpp  processGrid.hpp  sysInfo.hpp
input_files/: POD_bin.inp  POD_tec.inp  QR_pre.inp  sampErr.inp
search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  pages_0.js  pages_3.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  variables_c.js
src/: CMakeLists.txt  ParallelIO_MOS.cpp  VectorPOD.cpp  dataID.cpp  dataTool.cpp  executioner.cpp  extern_func.cpp  input.pdp  inputInfo.cpp  inputReader.cpp  metadata.cpp  misc_func.cpp  misc_func_mpi.cpp  operation.cpp  pMat.cpp  param.cpp  parser.cpp  parser_drive.cpp  processGrid.cpp  serial_norm_calc.cpp  sysInfo.cpp  test.m
tecio/teciosrc/: AltTecUtil.h  CMakeLists.txt  ClassMacros.h  DATAIO4.h  DataSetWriter.h  FileIOStream.h  FileIOStreamInterface.h  FileReaderInterface.h  FileStreamReader.cpp  FileStreamReader.h  FileStreamWriter.cpp  FileWriterInterface.h  GLOBAL.h  IJK.h  MASTER.h  Makefile  Makefile.linux  OrthogonalBisection.cpp  RawArray.h  STRUTIL.h  SZLFEPartitionedZoneWriter.cpp  SZLOrderedPartitionedZoneWriter.cpp  SZLOrderedZoneWriter.cpp  TecioSZL.h  TecioTecUtil.cpp  (+10 more)
tests/: CMakeLists.txt
tests/misc_inp/: projEr.inp
tests/test1_SVD_bin/: input.pdp
tests/test1_SVD_bin/Spatial_Modes/: Spatial_Modes.bin.REMOVED.git-id  Spatial_Modes_check.bin.REMOVED.git-id
tests/test_execs/: pMat_test.cpp  test_param.cpp  test_pinv.cpp
tests/test_meta/: test_EvenRead.cpp  test_EvenTec.cpp  test_bin.cpp  test_binSVD.cpp  test_tecplot.cpp  test_tecplotSVD.cpp
tests/test_wd/: test.bin.REMOVED.git-id  testInput.txt
tests/test_wd/even/: U150010.szplt  U150020.szplt  U150030.szplt  U150040.szplt  U150050.szplt
tests/test_wd/load/: U150010.szplt  U150020.szplt  U150030.szplt  U150040.szplt  U150050.szplt
tests/test_wd/testtec/: gemsma_cmb_150000.szplt  gemsma_cmb_150000.szplt.REMOVED.git-id  gemsma_cmb_150010.szplt.REMOVED.git-id  gemsma_cmb_150020.szplt.REMOVED.git-id  gemsma_cmb_150030.szplt.REMOVED.git-id  gemsma_cmb_150040.szplt.REMOVED.git-id  gemsma_cmb_150050.szplt.REMOVED.git-id  gemsma_cmb_150060.szplt.REMOVED.git-id  gemsma_cmb_150070.szplt.REMOVED.git-id  gemsma_cmb_150080.szplt.REMOVED.git-id  gemsma_cmb_150090.szplt.REMOVED.git-id  gemsma_cmb_150100.szplt.REMOVED.git-id  gemsma_cmb_150110.szplt.REMOVED.git-id  gemsma_cmb_150120.szplt.REMOVED.git-id  gemsma_cmb_150130.szplt.REMOVED.git-id  gemsma_cmb_150140.szplt.REMOVED.git-id  gemsma_cmb_150150.szplt.REMOVED.git-id  gemsma_cmb_150160.szplt.REMOVED.git-id  gemsma_cmb_150170.szplt.REMOVED.git-id  gemsma_cmb_150180.szplt.REMOVED.git-id  gemsma_cmb_150190.szplt.REMOVED.git-id  gemsma_cmb_150200.szplt.REMOVED.git-id  gemsma_cmb_150210.szplt.REMOVED.git-id  gemsma_cmb_150220.szplt.REMOVED.git-id  gemsma_cmb_150230.szplt.REMOVED.git-id  gemsma_cmb_150240.szplt.REMOVED.git-id  gemsma_cmb_150250.szplt.REMOVED.git-id  gemsma_cmb_150260.szplt.REMOVED.git-id  gemsma_cmb_150270.szplt.REMOVED.git-id  gemsma_cmb_150280.szplt.REMOVED.git-id  gemsma_cmb_150290.szplt.REMOVED.git-id  gemsma_cmb_150300.szplt.REMOVED.git-id  gemsma_cmb_150310.szplt.REMOVED.git-id  gemsma_cmb_150320.szplt.REMOVED.git-id  gemsma_cmb_150330.szplt.REMOVED.git-id  gemsma_cmb_150340.szplt.REMOVED.git-id  gemsma_cmb_150350.szplt.REMOVED.git-id  gemsma_cmb_150360.szplt.REMOVED.git-id  gemsma_cmb_150370.szplt.REMOVED.git-id  gemsma_cmb_150380.szplt.REMOVED.git-id  (+62 more)
tests/timing/: PDP_time.cpp
tst/: CMakeLists.txt  main.cpp
utilities/: CMakeLists.txt  PDP_time.cpp
